--- a/requirements.txt
+++ b/requirements.txt
@@ -11,3 +11,5 @@ pyinstaller>=5.0.0
 
 # For additional UI capabilities (optional)
 pillow>=8.0.0  # For image handling if needed in the future
+
+tkinterdnd2>=0.3.0  # For drag and drop functionality in tkinter GUI
